syntax = "proto3";
package virtengine.provider.v1beta3;

import "gogoproto/gogo.proto";
import "virtengine/base/v1beta3/attribute.proto";

option go_package = "github.com/virtengine/virtengine/sdk/go/node/provider/v1beta3";

// ProviderInfo
message ProviderInfo {
  string email = 1 [
    (gogoproto.customname) = "EMail",
    (gogoproto.jsontag)    = "email",
    (gogoproto.moretags)   = "yaml:\"email\""
  ];
  string website = 2 [
    (gogoproto.jsontag)    = "website",
    (gogoproto.moretags)   = "yaml:\"website\""
  ];
}

// MsgCreateProvider defines an SDK message for creating a provider
message MsgCreateProvider {
  option (gogoproto.equal) = false;

  string owner    = 1 [(gogoproto.jsontag) = "owner", (gogoproto.moretags) = "yaml:\"owner\""];
  string host_uri = 2 [
    (gogoproto.customname) = "HostURI",
    (gogoproto.jsontag)    = "host_uri",
    (gogoproto.moretags)   = "yaml:\"host_uri\""
  ];
  repeated virtengine.base.v1beta3.Attribute attributes = 3 [
    (gogoproto.castrepeated) = "github.com/virtengine/virtengine/sdk/go/node/types/v1beta3.Attributes",
    (gogoproto.nullable)     = false,
    (gogoproto.jsontag)      = "attributes",
    (gogoproto.moretags)     = "yaml:\"attributes\""
  ];

  ProviderInfo info = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag)  = "info",
    (gogoproto.moretags) = "yaml:\"info\""
  ];
}

// MsgCreateProviderResponse defines the Msg/CreateProvider response type.
message MsgCreateProviderResponse {}

// MsgUpdateProvider defines an SDK message for updating a provider
message MsgUpdateProvider {
  option (gogoproto.equal) = false;

  string owner    = 1 [(gogoproto.jsontag) = "owner", (gogoproto.moretags) = "yaml:\"owner\""];
  string host_uri = 2 [
    (gogoproto.customname) = "HostURI",
    (gogoproto.jsontag)    = "host_uri",
    (gogoproto.moretags)   = "yaml:\"host_uri\""
  ];
  repeated virtengine.base.v1beta3.Attribute attributes = 3 [
    (gogoproto.castrepeated) = "github.com/virtengine/virtengine/sdk/go/node/types/v1beta3.Attributes",
    (gogoproto.nullable)     = false,
    (gogoproto.jsontag)      = "attributes",
    (gogoproto.moretags)     = "yaml:\"attributes\""
  ];
  ProviderInfo info = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag)  = "info",
    (gogoproto.moretags) = "yaml:\"info\""
  ];
}

// MsgUpdateProviderResponse defines the Msg/UpdateProvider response type.
message MsgUpdateProviderResponse {}

// MsgDeleteProvider defines an SDK message for deleting a provider
message MsgDeleteProvider {
  option (gogoproto.equal) = false;

  string owner = 1 [(gogoproto.jsontag) = "owner", (gogoproto.moretags) = "yaml:\"owner\""];
}

// MsgDeleteProviderResponse defines the Msg/DeleteProvider response type.
message MsgDeleteProviderResponse {}

// Provider stores owner and host details
message Provider {
  option (gogoproto.equal)            = false;
  option (gogoproto.goproto_stringer) = false;

  string owner    = 1 [(gogoproto.jsontag) = "owner", (gogoproto.moretags) = "yaml:\"owner\""];
  string host_uri = 2 [
    (gogoproto.customname) = "HostURI",
    (gogoproto.jsontag)    = "host_uri",
    (gogoproto.moretags)   = "yaml:\"host_uri\""
  ];
  repeated virtengine.base.v1beta3.Attribute attributes = 3 [
    (gogoproto.castrepeated) = "github.com/virtengine/virtengine/sdk/go/node/types/v1beta3.Attributes",
    (gogoproto.nullable)     = false,
    (gogoproto.jsontag)      = "attributes",
    (gogoproto.moretags)     = "yaml:\"attributes\""
  ];

  ProviderInfo info = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag)  = "info",
    (gogoproto.moretags) = "yaml:\"info\""
  ];
}
